chore: fix the Gitch component's animation to not have too much displacement of the html tags.

--- a/src/components/components.css
+++ b/src/components/components.css
@@ -63,11 +63,11 @@
   }
   25% {
     opacity: 1;
-    transform: translate(0.05em, 0);
+    transform: translate(0.01em, 0);
   }
   49% {
     opacity: 0;
-    transform: translate(0.025em, 0);
+    transform: translate(0.005em, 0);
   }
   50% {
     opacity: 1;
